# cli_git_changelog

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
pr_releases_changelog/: changelog_gd_feat_fixing-my-threading.md  changelog_gd_feat_revamp-git-interfacing.md  changelog_gd_fix_quality-of-life-repairs.md
scripts/: close_branch  close_branch.sh
src/cli_git_changelog/: __init__.py  __main__.py  extract_git_commits_diff.py  generate_changelog.py  global_rate_limited_dispatcher.py  version.txt
src/cli_git_changelog/formatters/: __init__.py  changelog_prompt_formatters.py
src/cli_git_changelog/git_interface_strategies/: __init__.py  extract_git_batch_diff.py  extract_git_commits_diff.py
src/cli_git_changelog/model_interface/: __init__.py  anthropic_model.py
src/cli_git_changelog/scripts/: close_branch  close_branch.sh
src/cli_git_changelog/utils/: logger.py  path_sourcing.py
tools/: README.md  prevent_commit_to_main.py
