[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
]


[project]

name = "cli_git_changelog"
description = "Using LLMs to auto generate changelogs based on git history & commits"

authors = [
    { name = "Gabe Denton", email = "mason.g.denton@vanderbilt.edu" },
]

requires-python = ">= 3.10, < 3.11"

dynamic = [
    "version", # handled by setuptools_scm, see at the end
]

dependencies = [
    "pydantic >= 2.7.4, < 3",
    "python-dotenv >= 1, < 2",
    "requests > 2.30, < 3",
    "anthropic > 0.45, < 1.0",
    "ratelimit >= 2.2.1, < 3",
]

[project.optional-dependencies]

dev = [
    "pre-commit",
]

[project.scripts]
generate-changelog = "cli_git_changelog.__main__:main"

[tool.setuptools]
script-files = ["scripts/close_branch"]

[tool.setuptools.packages.find]
where = ["src", "."]
namespaces = true
include = [
    "cli_git_changelog*",
    "tests*",
]

[tool.setuptools.package-data]
"auto_apply_bot" = ["version.txt", "**/*.toml"]

[tool.setuptools_scm]
write_to = "src/cli_git_changelog/version.txt"
git_describe_command = "git describe --tags --dirty --match 'v*' --abbrev=8"